--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -1,8 +1,9 @@
-FROM alpine:latest
+FROM centos:7
 
 ARG FRP_VERSION=0.16.0
 
-RUN apk --update add --no-cache wget
+RUN yum -y update \
+	&& yum -y install wget
 	
 WORKDIR /tmp
 
@@ -10,7 +11,9 @@ RUN set -x \
 	&& wget https://github.com/fatedier/frp/releases/download/v${FRP_VERSION}/frp_${FRP_VERSION}_linux_amd64.tar.gz \
 	&& tar -zxf frp_${FRP_VERSION}_linux_amd64.tar.gz \
 	&& mv frp_${FRP_VERSION}_linux_amd64 /var/frp \
-	&& mkdir -p /var/frp/conf
+	&& mkdir -p /var/frp/conf \
+	&& yum remove -y wget \
+	&& yum autoremove  -y
 	
 COPY conf/frps_min.ini /var/frp/conf/frps.ini
 
